gave .header-section a minimum height of 800 px to fix the viewport as the content was squashed when the browser reduced

--- a/app.css
+++ b/app.css
@@ -203,6 +203,7 @@ ul {
 /* HEADER SECTION */
 .header-section {
     height: 100vh;
+    min-height: 800px;
 }
 
 /* NAVBAR SECTION */
